# SoftRenderer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
assets/scripts/: generate_test_yuv.py
assets/yuv/: test_640x480.yuv
scripts/: clean.sh  open_xcode.sh  setup_xcode.sh
softrender/: main.cpp
softrender.xcodeproj/: project.pbxproj
softrender.xcodeproj/project.xcworkspace/xcuserdata/fengruiwen.xcuserdatad/: UserInterfaceState.xcuserstate
softrender.xcodeproj/project.xcworkspace/xcuserdata/jormungand.xcuserdatad/: UserInterfaceState.xcuserstate
softrender.xcodeproj/xcuserdata/jormungand.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: main.cpp
src/core/: Color.hpp  FrameBuffer.cpp  FrameBuffer.hpp
src/geometry/: Vertex.hpp
src/rasterization/: Interpolator.cpp  Interpolator.hpp  Rasterizer.cpp  Rasterizer.hpp
src/shaders/: PassThroughVertexShader.cpp  PassThroughVertexShader.hpp  Transform2DShader.cpp  Transform2DShader.hpp  VertexShader.cpp  VertexShader.hpp
src/texture/: ColorSpace.cpp  ColorSpace.hpp  YUVTexture.cpp  YUVTexture.hpp
